Fixed small issue with -Events- background image zoom on mobile displays.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -10,6 +10,10 @@
     #animelist {
         background-attachment: scroll;
     }
+
+    #events {
+        background-attachment: scroll;
+    }
 }
 
 @media screen and (max-width: 900px) {
